julia_experiments/_cimgui.h

typedef char bool;
                
     
struct ImDrawCmd;
struct ImDrawList;
typedef unsigned int ImU32;
     
typedef void* ImTextureID;
struct ImVec2
{
    float x, y;
};
typedef void (*ImDrawCallback)(const struct ImDrawList* parent_list, const struct ImDrawCmd* cmd);
struct ImDrawCmd
{
    unsigned int    ElemCount;              
    struct ImVec4          ClipRect;               
    ImTextureID     TextureId;              
    ImDrawCallback  UserCallback;           
    //void*           UserCallbackData;           struct ImDrawCmd() { ElemCount = 0; ClipRect.x = ClipRect.y = -8192.0f; ClipRect.z = ClipRect.w = +8192.0f; TextureId = 0; UserCallback = 0; UserCallbackData = 0; }
};
typedef unsigned short ImDrawIdx;
struct ImDrawList
{
};
extern bool             igCombo3(const char* label, int* current_item, bool(*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count, int height_in_items);
extern bool             igListBox2(const char* label, int* current_item, bool(*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count, int height_in_items);
extern void             ImDrawList_AddImage(struct ImDrawList* list, ImTextureID user_texture_id, const struct ImVec2 a, const struct ImVec2 b, const struct ImVec2 uv0, const struct ImVec2 uv1, ImU32 col);
extern void             ImDrawList_AddPolyline(struct ImDrawList* list, const struct ImVec2* points, const int num_points, ImU32 col, bool closed, float thickness, bool anti_aliased);
extern void             ImDrawList_AddConvexPolyFilled(struct ImDrawList* list, const struct ImVec2* points, const int num_points, ImU32 col, bool anti_aliased);
extern void             ImDrawList_AddBezierCurve(struct ImDrawList* list, const struct ImVec2 pos0, const struct ImVec2 cp0, const struct ImVec2 cp1, const struct ImVec2 pos1, ImU32 col, float thickness, int num_segments);
extern void             ImDrawList_PathClear(struct ImDrawList* list);
extern void             ImDrawList_PathLineTo(struct ImDrawList* list, const struct ImVec2 pos);
extern void             ImDrawList_PathLineToMergeDuplicate(struct ImDrawList* list, const struct ImVec2 pos);
extern void             ImDrawList_PathFill(struct ImDrawList* list, ImU32 col);
extern void             ImDrawList_PathStroke(struct ImDrawList* list, ImU32 col, bool closed, float thickness);
extern void             ImDrawList_PathArcTo(struct ImDrawList* list, const struct ImVec2 centre, float radius, float a_min, float a_max, int num_segments);
extern void             ImDrawList_PathArcToFast(struct ImDrawList* list, const struct ImVec2 centre, float radius, int a_min_of_12, int a_max_of_12);
 
extern void             ImDrawList_PathBezierCurveTo(struct ImDrawList* list, const struct ImVec2 p1, const struct ImVec2 p2, const struct ImVec2 p3, int num_segments);
extern void             ImDrawList_PathRect(struct ImDrawList* list, const struct ImVec2 rect_min, const struct ImVec2 rect_max, float rounding, int rounding_corners);
extern void             ImDrawList_ChannelsSplit(struct ImDrawList* list, int channels_count);
extern void             ImDrawList_ChannelsMerge(struct ImDrawList* list);
extern void             ImDrawList_ChannelsSetCurrent(struct ImDrawList* list, int channel_index);
extern void             ImDrawList_AddCallback(struct ImDrawList* list, ImDrawCallback callback, void* callback_data);
 
extern void             ImDrawList_AddDrawCmd(struct ImDrawList* list);
 
extern void             ImDrawList_PrimReserve(struct ImDrawList* list, int idx_count, int vtx_count);
extern void             ImDrawList_PrimRect(struct ImDrawList* list, const struct ImVec2 a, const struct ImVec2 b, ImU32 col);
extern void             ImDrawList_PrimRectUV(struct ImDrawList* list, const struct ImVec2 a, const struct ImVec2 b, const struct ImVec2 uv_a, const struct ImVec2 uv_b, ImU32 col);
extern void             ImDrawList_PrimVtx(struct ImDrawList* list, const struct ImVec2 pos, const struct ImVec2 uv, ImU32 col);
extern void             ImDrawList_PrimWriteVtx(struct ImDrawList* list, const struct ImVec2 pos, const struct ImVec2 uv, ImU32 col);
extern void             ImDrawList_PrimWriteIdx(struct ImDrawList* list, ImDrawIdx idx);
extern void             ImDrawList_UpdateClipRect(struct ImDrawList* list);
extern void             ImDrawList_UpdateTextureID(struct ImDrawList* list);
extern void setRenderCallback(void(*rc)(void));
extern bool setupAll(void);
extern void mainLoop(void);
extern void destroyAll(void);