julia_experiments/cimgui.jl


function ImDrawList_AddImage(list::Ptr{ImDrawList},user_texture_id::ImTextureID,a::ImVec2,b::ImVec2,uv0::ImVec2,uv1::ImVec2,col::ImU32)
    ccall((:ImDrawList_AddImage,cimgui),Void,(Ptr{ImDrawList},ImTextureID,ImVec2,ImVec2,ImVec2,ImVec2,ImU32),list,user_texture_id,a,b,uv0,uv1,col)
end

function ImDrawList_AddPolyline(list::Ptr{ImDrawList},points::Ptr{ImVec2},num_points::Cint,col::ImU32,closed::bool,thickness::Cfloat,anti_aliased::bool)
    ccall((:ImDrawList_AddPolyline,cimgui),Void,(Ptr{ImDrawList},Ptr{ImVec2},Cint,ImU32,bool,Cfloat,bool),list,points,num_points,col,closed,thickness,anti_aliased)
end

function ImDrawList_AddConvexPolyFilled(list::Ptr{ImDrawList},points::Ptr{ImVec2},num_points::Cint,col::ImU32,anti_aliased::bool)
    ccall((:ImDrawList_AddConvexPolyFilled,cimgui),Void,(Ptr{ImDrawList},Ptr{ImVec2},Cint,ImU32,bool),list,points,num_points,col,anti_aliased)
end

function ImDrawList_AddBezierCurve(list::Ptr{ImDrawList},pos0::ImVec2,cp0::ImVec2,cp1::ImVec2,pos1::ImVec2,col::ImU32,thickness::Cfloat,num_segments::Cint)
    ccall((:ImDrawList_AddBezierCurve,cimgui),Void,(Ptr{ImDrawList},ImVec2,ImVec2,ImVec2,ImVec2,ImU32,Cfloat,Cint),list,pos0,cp0,cp1,pos1,col,thickness,num_segments)
end

function ImDrawList_PathClear(list::Ptr{ImDrawList})
    ccall((:ImDrawList_PathClear,cimgui),Void,(Ptr{ImDrawList},),list)
end

function ImDrawList_PathLineTo(list::Ptr{ImDrawList},pos::ImVec2)
    ccall((:ImDrawList_PathLineTo,cimgui),Void,(Ptr{ImDrawList},ImVec2),list,pos)
end

function ImDrawList_PathLineToMergeDuplicate(list::Ptr{ImDrawList},pos::ImVec2)
    ccall((:ImDrawList_PathLineToMergeDuplicate,cimgui),Void,(Ptr{ImDrawList},ImVec2),list,pos)
end

function ImDrawList_PathFill(list::Ptr{ImDrawList},col::ImU32)
    ccall((:ImDrawList_PathFill,cimgui),Void,(Ptr{ImDrawList},ImU32),list,col)
end

function ImDrawList_PathStroke(list::Ptr{ImDrawList},col::ImU32,closed::bool,thickness::Cfloat)
    ccall((:ImDrawList_PathStroke,cimgui),Void,(Ptr{ImDrawList},ImU32,bool,Cfloat),list,col,closed,thickness)
end

function ImDrawList_PathArcTo(list::Ptr{ImDrawList},centre::ImVec2,radius::Cfloat,a_min::Cfloat,a_max::Cfloat,num_segments::Cint)
    ccall((:ImDrawList_PathArcTo,cimgui),Void,(Ptr{ImDrawList},ImVec2,Cfloat,Cfloat,Cfloat,Cint),list,centre,radius,a_min,a_max,num_segments)
end

function ImDrawList_PathArcToFast(list::Ptr{ImDrawList},centre::ImVec2,radius::Cfloat,a_min_of_12::Cint,a_max_of_12::Cint)
    ccall((:ImDrawList_PathArcToFast,cimgui),Void,(Ptr{ImDrawList},ImVec2,Cfloat,Cint,Cint),list,centre,radius,a_min_of_12,a_max_of_12)
end

function ImDrawList_PathBezierCurveTo(list::Ptr{ImDrawList},p1::ImVec2,p2::ImVec2,p3::ImVec2,num_segments::Cint)
    ccall((:ImDrawList_PathBezierCurveTo,cimgui),Void,(Ptr{ImDrawList},ImVec2,ImVec2,ImVec2,Cint),list,p1,p2,p3,num_segments)
end

function ImDrawList_PathRect(list::Ptr{ImDrawList},rect_min::ImVec2,rect_max::ImVec2,rounding::Cfloat,rounding_corners::Cint)
    ccall((:ImDrawList_PathRect,cimgui),Void,(Ptr{ImDrawList},ImVec2,ImVec2,Cfloat,Cint),list,rect_min,rect_max,rounding,rounding_corners)
end

function ImDrawList_ChannelsSplit(list::Ptr{ImDrawList},channels_count::Cint)
    ccall((:ImDrawList_ChannelsSplit,cimgui),Void,(Ptr{ImDrawList},Cint),list,channels_count)
end

function ImDrawList_ChannelsMerge(list::Ptr{ImDrawList})
    ccall((:ImDrawList_ChannelsMerge,cimgui),Void,(Ptr{ImDrawList},),list)
end

function ImDrawList_ChannelsSetCurrent(list::Ptr{ImDrawList},channel_index::Cint)
    ccall((:ImDrawList_ChannelsSetCurrent,cimgui),Void,(Ptr{ImDrawList},Cint),list,channel_index)
end

function ImDrawList_AddCallback(list::Ptr{ImDrawList},callback::ImDrawCallback,callback_data::Ptr{Void})
    ccall((:ImDrawList_AddCallback,cimgui),Void,(Ptr{ImDrawList},ImDrawCallback,Ptr{Void}),list,callback,callback_data)
end

function ImDrawList_AddDrawCmd(list::Ptr{ImDrawList})
    ccall((:ImDrawList_AddDrawCmd,cimgui),Void,(Ptr{ImDrawList},),list)
end

function ImDrawList_PrimReserve(list::Ptr{ImDrawList},idx_count::Cint,vtx_count::Cint)
    ccall((:ImDrawList_PrimReserve,cimgui),Void,(Ptr{ImDrawList},Cint,Cint),list,idx_count,vtx_count)
end

function ImDrawList_PrimRect(list::Ptr{ImDrawList},a::ImVec2,b::ImVec2,col::ImU32)
    ccall((:ImDrawList_PrimRect,cimgui),Void,(Ptr{ImDrawList},ImVec2,ImVec2,ImU32),list,a,b,col)
end

function ImDrawList_PrimRectUV(list::Ptr{ImDrawList},a::ImVec2,b::ImVec2,uv_a::ImVec2,uv_b::ImVec2,col::ImU32)
    ccall((:ImDrawList_PrimRectUV,cimgui),Void,(Ptr{ImDrawList},ImVec2,ImVec2,ImVec2,ImVec2,ImU32),list,a,b,uv_a,uv_b,col)
end

function ImDrawList_PrimVtx(list::Ptr{ImDrawList},pos::ImVec2,uv::ImVec2,col::ImU32)
    ccall((:ImDrawList_PrimVtx,cimgui),Void,(Ptr{ImDrawList},ImVec2,ImVec2,ImU32),list,pos,uv,col)
end

function ImDrawList_PrimWriteVtx(list::Ptr{ImDrawList},pos::ImVec2,uv::ImVec2,col::ImU32)
    ccall((:ImDrawList_PrimWriteVtx,cimgui),Void,(Ptr{ImDrawList},ImVec2,ImVec2,ImU32),list,pos,uv,col)
end

function ImDrawList_PrimWriteIdx(list::Ptr{ImDrawList},idx::ImDrawIdx)
    ccall((:ImDrawList_PrimWriteIdx,cimgui),Void,(Ptr{ImDrawList},ImDrawIdx),list,idx)
end

function ImDrawList_UpdateClipRect(list::Ptr{ImDrawList})
    ccall((:ImDrawList_UpdateClipRect,cimgui),Void,(Ptr{ImDrawList},),list)
end

function ImDrawList_UpdateTextureID(list::Ptr{ImDrawList})
    ccall((:ImDrawList_UpdateTextureID,cimgui),Void,(Ptr{ImDrawList},),list)
end

function setRenderCallback(rc::Function)
    const rrc = cfunction(rc, Void, ())
    ccall((:setRenderCallback,cimgui),Void,(Ptr{Void},),rrc)
end

function setupAll()
    ccall((:setupAll,cimgui),bool,())
end

function mainLoop()
    ccall((:mainLoop,cimgui),Void,())
end

function destroyAll()
    ccall((:destroyAll,cimgui),Void,())
end
